@@ -121,19 +121,16 @@ class plgSearchWeblinks extends JPlugin
 				$order = 'a.date DESC';
 		}
 
-		$query = 'SELECT a.title AS title, a.description AS text, a.date AS created, a.url, '
-		. ' CASE WHEN CHAR_LENGTH(a.alias) THEN CONCAT_WS(\':\', a.id, a.alias) ELSE a.id END as slug, '
-		. ' CASE WHEN CHAR_LENGTH(b.alias) THEN CONCAT_WS(\':\', b.id, b.alias) ELSE b.id END as catslug, '
-		. ' CONCAT_WS(" / ", '.$db->Quote($section).', b.title) AS section,'
-		. ' "1" AS browsernav'
-		. ' FROM #__weblinks AS a'
-		. ' INNER JOIN #__categories AS b ON b.id = a.catid'
-		. ' WHERE ('. $where .')'
-		. ' AND a.state = 1'
-		. ' AND b.published = 1'
-		. ' AND b.access IN ('.$groups.')'
-		. ' ORDER BY '. $order
-		;
+		$query = new JQuery();
+		$query->select('a.title AS title, a.description AS text, a.date AS created, a.url, '
+					  .'CASE WHEN CHAR_LENGTH(a.alias) THEN CONCAT_WS(\':\', a.id, a.alias) ELSE a.id END as slug, '
+					  .'CASE WHEN CHAR_LENGTH(b.alias) THEN CONCAT_WS(\':\', b.id, b.alias) ELSE b.id END as catslug, '
+					  .'CONCAT_WS(" / ", '.$db->Quote($section).', b.title) AS section, "1" AS browsernav');
+		$query->from('#__weblinks AS a');
+		$query->innerJoin('#__categories AS b ON b.id = a.catid');
+		$query->where('('.$where.')' . ' AND a.state=1 AND  b.published=1 AND  b.access IN ('.$groups.')');
+		$query->order($order);
+
 		$db->setQuery($query, 0, $limit);
 		$rows = $db->loadObjectList();
 
