@@ -27,6 +27,11 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+03-Feb-2010 Hannes Papenberg
+# Fixed bug in JTable::reset() that don't properly reset the values - Thanks Jonnathan!
+^ Changed JTable::__construct() to create the properties with their default values from the table - Thanks Jonnathan!
+^ Changed queries of all plugins to use JQuery - Thanks Dejan Acman!
+
 02-Feb-2010 Hannes Papenberg
 # - fixed category parameter in mod_latest - Thanks Jonnathan!
 ^ - Changed mod_popular to use the contentModelArticles - Thanks Jonnathan!
